swagger API setting
