# router/authorRouter.js
@@ -12,7 +12,7 @@ const auth = require("../auth/authorization")
 router.get("/", [auth, getAllAuthors])
 router.get("/:authorId", [auth, getAuthorByIds])
 router.post("/", [auth, postAuthor])
-router.put("/:authorId", [auth, updateAuthor])
+router.patch("/:authorId", [auth, updateAuthor])
 router.delete("/:authorId", [auth, deleteAuthor])
 
 module.exports = router
